<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_brush"
        android:icon="@drawable/ic_brush_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_brush"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_palette_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_color"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_getImage"
        android:icon="@drawable/ic_insert_photo_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_getCameraImage"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always"/>


</menu>